# GamePhysics2024

./: CMakeLists.txt
src/: main.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  Draw.cpp  Draw.h  Math.cpp  PhysicsUtils.cpp  PhysicsUtils.h  Simple2DScene.cpp  Simple2DScene.h
src/geometry/: AxisAlignedBox.cpp  AxisAlignedBox.h  Circle.cpp  Circle.h  Line.cpp  Line.h  Particle.cpp  Particle.h  PlayerInput.cpp  PlayerInput.h  RandomParticleGenerator.cpp  RandomParticleGenerator.h  Rectangle.cpp  Rectangle.h  RigidBody.cpp  RigidBody.h  World.cpp  World.h
src/physics/: AxisAlignedBox.cpp  AxisAlignedBox.h  Circle.cpp  Circle.h  CollisionManifold.cpp  CollisionManifold.h  Line.cpp  Line.h  Particle.cpp  Particle.h  PlayerInput.cpp  PlayerInput.h  RandomParticleGenerator.h  Rectangle.cpp  Rectangle.h  RigidBody.cpp  RigidBody.h  World.cpp  World.h
src/scenes/: Assignment1.cpp  Assignment1.h  Assignment10.cpp  Assignment10.h  Assignment11.cpp  Assignment11.h  Assignment2.cpp  Assignment2.h  Assignment3.cpp  Assignment3.h  Assignment4.cpp  Assignment4.h  Assignment5.cpp  Assignment5.h  Assignment6.cpp  Assignment6.h  Assignment7.cpp  Assignment7.h  Assignment8.cpp  Assignment8.h  Assignment9.cpp  Assignment9.h  FinalAssignment.cpp  FinalAssignment.h  TestScene.h
